feat: Upgrade Spring Boot to 3.5.14. Upgrade related dependencies too (#54)
* feat: Upgrade to Spring Boot 3.3.13 - all Spring and related dependencies are upgraded.

* feat: Upgrade to Spring Boot 3.5.11. Extra change: Clover plugin is removed from build plugins.

* fix: fix(deps): Bump atp-libraries to versions upgraded to Spring Boot 3.5.11.

* refactor: Replace org.apache.logging.log4j.util.Strings usages to org.apache.commons.lang3.StringUtils.

* fix(deps): Unify dependencies: Bump Spring Boot to 3.5.14, Spring Cloud to 2025.0.2, maven-surefire-plugin to 3.5.5, logback to 1.5.32, bouncycastle to 1.84, mapstruct to 1.6.3, junit to 5.12.2, netty to 4.1.132.Final, httpclient5/httpcore5 to 5.4.4/5.3.4, kafka-clients to 3.9.2. Bump atp-integration to 1.0.0, atp-auth to 2.0.0. atp-common to 1.0.0. Explicit Spring dependencies management is removed. Project version is changed to 1.0.0-SNAPSHOT.